[gd_scene load_steps=8 format=3 uid="uid://sfmgup06nvhq"]

[ext_resource type="Script" uid="uid://b7436owsq4qun" path="res://minigames/jp_lesson/states/state_manager.gd" id="1_viein"]
[ext_resource type="Script" uid="uid://bbyca68mnlqvb" path="res://minigames/jp_lesson/states/tutorial.gd" id="2_whg7i"]
[ext_resource type="Script" uid="uid://caaqh386qfeoq" path="res://minigames/jp_lesson/states/level_one.gd" id="3_jnbmb"]
[ext_resource type="Script" uid="uid://dedjgqqvfgvw7" path="res://minigames/jp_lesson/states/level_two.gd" id="4_6kx4c"]
[ext_resource type="Script" uid="uid://be4udpakk8ybb" path="res://minigames/jp_lesson/states/level_three.gd" id="5_lih5v"]
[ext_resource type="Script" uid="uid://blglaopwlqnid" path="res://minigames/jp_lesson/states/level_four.gd" id="6_8p0x8"]
[ext_resource type="Script" uid="uid://d3awuavt8xxcu" path="res://minigames/jp_lesson/states/level_five.gd" id="7_bjh0m"]

[node name="StateManager" type="Node"]
script = ExtResource("1_viein")

[node name="Tutorial" type="Node" parent="."]
script = ExtResource("2_whg7i")

[node name="LevelOne" type="Node" parent="."]
script = ExtResource("3_jnbmb")

[node name="LevelTwo" type="Node" parent="."]
script = ExtResource("4_6kx4c")

[node name="LevelThree" type="Node" parent="."]
script = ExtResource("5_lih5v")

[node name="LevelFour" type="Node" parent="."]
script = ExtResource("6_8p0x8")

[node name="LevelFive" type="Node" parent="."]
script = ExtResource("7_bjh0m")
